--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "one-true",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://coraway-test.github.io/coraway/",
   "dependencies": {
     "@firebase/app": "^0.5.0",
     "@firebase/firestore": "^1.9.1",
@@ -11,6 +12,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.6.1",
     "formik": "^2.0.8",
+    "gh-pages": "^2.2.0",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -37,7 +39,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "init-db": "ts-node -P ./init-db.tsconfig.json ./init-db.ts",
-    "homepage" : "http://myname.github.io/myapp"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
